Font size on small screen fix

--- a/packages/client/scss/game/impl/_friends.scss
+++ b/packages/client/scss/game/impl/_friends.scss
@@ -210,5 +210,11 @@
             bottom: 99px;
             transform: scale(1.5);
         }
+
+        .friend-slot > p {
+            padding-top: 2px;
+
+            font-size: 12px;
+        }
     }
 }
